<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="36sp"
        android:textColor="@color/secondary"
    />

    <EditText
        android:id="@+id/fname_input"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/fname_et"
        android:gravity="center"
        android:background="@drawable/rounded_background"
        android:padding="10dp"
        android:textColorHint="@color/primary_fade"
        android:textColor="@color/primary"
        android:layout_marginBottom="10dp"
    />

    <EditText
        android:id="@+id/lname_input"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/lname_et"
        android:gravity="center"
        android:textColorHint="@color/primary_fade"
        android:background="@drawable/rounded_background"
        android:padding="10dp"
        android:textColor="@color/primary"
    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
    >

        <EditText
            android:id="@+id/weight_input"
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:background="@drawable/weight_bg"
            android:backgroundTint="@color/secondary"
            android:gravity="center"
            android:hint="@string/weight_et"
            android:inputType="numberDecimal"
            android:text="0"
            android:textColor="@color/primary"
            android:textColorHint="@color/secondary_fade"
            android:textSize="24sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kg"
            android:textSize="24sp"
            android:textColor="@color/secondary"
            android:layout_marginLeft="10dp"
        />
    </LinearLayout>

    <SeekBar
        android:id="@+id/weight_input_slider"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:theme="@style/MySeekBar"
    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/height_input"
            android:layout_width="100dp"
            android:layout_height="53dp"
            android:background="@drawable/height_bg"
            android:backgroundTint="@color/secondary"
            android:gravity="center"
            android:hint="@string/weight_et"
            android:inputType="numberDecimal"
            android:text="0"
            android:textColor="@color/primary"
            android:textColorHint="@color/secondary_fade"
            android:textSize="24sp" />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cm"
            android:textSize="24sp"
            android:textColor="@color/secondary"
            />
    </LinearLayout>

    <SeekBar
        android:id="@+id/height_input_slider"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:theme="@style/MySeekBar"
        />

    <!--
    <TextView
        android:id="@+id/weight_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
    />
    -->

    <EditText
        android:id="@+id/age_input"
        android:layout_width="100dp"
        android:layout_height="103dp"
        android:background="@drawable/age_bg"
        android:paddingRight="4dp"
        android:paddingTop="5dp"
        android:backgroundTint="@color/secondary"
        android:gravity="center"
        android:hint="@string/age_et"
        android:inputType="number"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary_fade"
        android:textSize="24sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/male_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/secondary"
            android:theme="@style/RadioButton"
            android:text="@string/male_tv"/>

        <RadioButton
            android:id="@+id/female_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/secondary"
            android:theme="@style/RadioButton"
            android:text="@string/female_tv"/>

    </RadioGroup>

    <Button
        android:id="@+id/calculate_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_bt"
        android:textSize="30sp"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/primary"
        android:drawableLeft="@drawable/calculator"
    />

</LinearLayout>